# centrifuge-chain

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CNAME  Cargo.lock~Compiles AND contains trait bounds  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  cloudbuild.yaml  codecov.yaml  crates.js  docker-compose-local-chain.yml  docker-compose-local-relay.yml  docker-compose.yml  flake.nix  gplv3-template.rs  help.html  index.html  license-template-apache.txt  license-template-gplv3.txt  rococo-local.json  rust-docker-compile-build-server.MD  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  src-files.js  swap_delta.md  taplo.toml
libs/common-traits/: Cargo.toml  common-traits.rs  traits.rs
libs/common-traits/src/: lib.rs
libs/common-types/: Cargo.toml
libs/common-types/src/: ids.rs  impls.rs  lib.rs  tests.rs  tokens.rs
libs/commons/: Cargo.toml
libs/commons/src/: lib.rs  traits.rs  types.rs
libs/mock-builder/: Cargo.toml
libs/mock-builder/proc-macro/: Cargo.toml
libs/mock-builder/src/: lib.rs  location.rs  storage.rs  storage_2.rs  util.rs
libs/mock-builder/tests/: pallet.rs
libs/mocks/: Cargo.toml
libs/mocks/src/: accrual.rs  asset_registry.rs  change_guard.rs  connectors.rs  connectors_gateway_routers.rs  converter.rs  currency_conversion.rs  data.rs  ethereum_transaction.rs  ethereum_transactor.rs  fees.rs  foreign_investment.rs  foreign_investment_hooks.rs  investment.rs  lib.rs  liquidity_pools.rs  liquidity_pools_gateway.rs  liquidity_pools_gateway_queue.rs  liquidity_pools_gateway_routers.rs  message_receiver.rs  outbound_queue.rs  pay_fee.rs  permissions.rs  pools.rs  pre_conditions.rs  prices.rs  queue.rs  rewards.rs  router_message.rs  status_notification.rs  template.rs  time.rs  token_swaps.rs  try_convert.rs  value_provider.rs  write_off_policy.rs
libs/primitives/: Cargo.toml
libs/primitives/src/: conversion.rs  impls.rs  lib.rs
libs/proofs/: Cargo.toml
libs/proofs/src/: lib.rs  mock.rs  tests.rs
libs/test-utils/: Cargo.toml
libs/test-utils/src/: lib.rs
libs/trait-crowdloan-reward/: Cargo.toml
libs/trait-crowdloan-reward/src/: lib.rs
libs/traits/: Cargo.toml
libs/traits/src/: accrual.rs  adjustments.rs  benchmarking.rs  changes.rs  connectors.rs  data.rs  ethereum.rs  fee.rs  fees.rs  impls.rs  interest.rs  investments.rs  lib.rs  liquidity_pools.rs  ops.rs  pools.rs  prices.rs  queue.rs  rewards.rs  swaps.rs  time.rs
libs/traits/tests/: accrual.rs  rewards.rs
libs/types/: Cargo.toml
libs/types/src/: adjustments.rs  changes.rs  consts.rs  domain_address.rs  epoch.rs  fee_keys.rs  fixed_point.rs  fulfillments.rs  gateway.rs  ids.rs  impls.rs  investments.rs  lib.rs  locations.rs  oracles.rs  orders.rs  permissions.rs  pools.rs  portfolio.rs  reserves.rs  rewards.rs  time.rs  tokens.rs  tranches.rs  weights.rs  xcm.rs
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs  num_wrapper.rs  time.rs
node/: Cargo.toml
node/data-extension/worker/: Cargo.toml
node/res/: algol-spec.json  antares-spec-raw.json  catalyst-spec.json  charcoal-spec-raw.json  charcoal-spec.json  rococo-local.json
node/res/genesis/: README.md  altair-genesis-spec-raw.json  altair-genesis-spec.json  centrifuge-genesis-spec-raw.json  centrifuge-genesis-spec.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
node/src/data_extension_worker/: config.rs  document.rs  mod.rs  worker.rs
node/src/rpc/: anchors.rs  evm.rs  mod.rs  pools.rs  rewards.rs
node/src/service/: evm.rs
pallets/anchors/: Cargo.toml
pallets/anchors/src/: benchmarking.rs  common.rs  lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
pallets/block-rewards/: Cargo.toml
pallets/block-rewards/src/: benchmarking.rs  lib.rs  migration.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/bridge/: Cargo.toml  README.md
pallets/bridge-mapping/: Cargo.toml
pallets/bridge-mapping/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/bridge-names/: Cargo.toml
pallets/bridge-names/src/: lib.rs  mock.rs  tests.rs
pallets/bridge/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/call-remarked/: Cargo.toml
pallets/call-remarked/src/: lib.rs
pallets/cf-reward/: Cargo.toml
pallets/cf-reward/src/: lib.rs  mock.rs  tests.rs
pallets/cfg-migration/: Cargo.toml
pallets/cfg-migration/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/change-guard/: Cargo.toml
pallets/change-guard/src/: lib.rs
pallets/claims/: Cargo.toml  README.md
pallets/claims/src/: lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
pallets/collator-allowlist/: Cargo.toml
pallets/collator-allowlist/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/connectors/: Cargo.toml
pallets/connectors-gateway/: Cargo.toml
pallets/connectors-gateway/axelar-gateway-precompile/: Cargo.toml
pallets/connectors-gateway/connectors-gateway-axelar-precompile/: Cargo.toml
pallets/connectors-gateway/connectors-gateway-routers/: Cargo.toml
pallets/connectors-gateway/routers/: Cargo.toml
pallets/connectors-gateway/src/: lib.rs  mock.rs  origin.rs  router.rs  tests.rs  weights.rs
pallets/connectors/src/: contract.rs  hooks.rs  inbound.rs  lib.rs  message.rs  routers.rs  weights.rs
pallets/crowdloan-claim/: Cargo.toml  Makefile  README.md
pallets/crowdloan-claim/crowdloan-claim-reward/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
primitives/tokens/: Cargo.toml
runtime/: Cargo.toml  build.rs
runtime/altair/: Cargo.toml  build.rs
runtime/centrifuge/: Cargo.toml  build.rs
runtime/charcoal/: Cargo.toml
runtime/common/: Cargo.toml  common.rs
runtime/development/: Cargo.toml  build.rs
runtime/integration-tests/: Cargo.toml  build.rs
runtime/integration-tests-v2/: Cargo.toml
runtime/src/: accounts.scale  anchor.rs  bridge.rs  bridge.rs.old  cfg_claims.rs  common.rs  constants.rs  fees.rs  impls.rs  lib.rs  nfts.rs  proofs.rs  rad_claims.rs
runtime/tests/: Cargo.toml
runtime/wasm/: Cargo.toml  build.sh
(+5289 files in other folders)
