[package]
name = "centrifuge-chain"
version = "0.10.21"
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Centrifuge chain implementation in Rust."
build = "build.rs"
edition = "2021"
license = "LGPL-3.0"
default-run = "centrifuge-chain"
homepage = "https://centrifuge.io/"
repository = "https://github.com/centrifuge/centrifuge-chain"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[badges]
travis-ci = { repository = "centrifuge/centrifuge-chain", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "centrifuge/centrifuge-chain" }
is-it-maintained-open-issues = { repository = "centrifuge/centrifuge-chain" }

[[bin]]
name = "centrifuge-chain"
path = "src/main.rs"

[workspace]
members = [
  "libs/primitives",
  "libs/proofs",
  "libs/test-utils",
  "libs/traits",
  "libs/types",
  "pallets/anchors",
  "pallets/bridge",
  "pallets/claims",
  "pallets/collator-allowlist",
  "pallets/crowdloan-claim",
  "pallets/crowdloan-reward",
  "pallets/fees",
  "pallets/interest-accrual",
  "pallets/investments",
  "pallets/keystore",
  "pallets/liquidity-rewards",
  "pallets/loans",
  "pallets/migration",
  "pallets/nft",
  "pallets/nft-sales",
  "pallets/permissions",
  "pallets/pool-system",
  "pallets/restricted-tokens",
  "pallets/rewards",
  "runtime/altair",
  "runtime/centrifuge",
  "runtime/common",
  "runtime/integration-tests",
]

[dependencies]
# third-party dependencies
clap = { version = "3.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false }
futures = { version = "0.3.21", features = ["compat"] }
hex-literal = "0.2.1"
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
log = "0.4.8"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
tracing-core = "=0.1.29"
url = "2.2.2"

# primitives
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
sp-keystore = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }

# client dependencies
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-client-db = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-service = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

# Cli specific
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
node-inspect = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.29" }

# Local dependencies
cfg-types = { path = "./libs/types" }
pallet-anchors = { path = "./pallets/anchors" }
pallet-loans = { path = "./pallets/loans" }
pallet-pool-system = { path = "./pallets/pool-system" }

# frame dependencies
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29" }

# node-specific dependencies
altair-runtime = { path = "runtime/altair" }
centrifuge-runtime = { path = "runtime/centrifuge" }
cfg-primitives = { path = "libs/primitives" }
development-runtime = { path = "runtime/development" }
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
runtime-common = { path = "runtime/common" }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.29" }

# integration testing
runtime-integration-tests = { path = "runtime/integration-tests", optional = true }

[build-dependencies]
substrate-build-script-utils = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
vergen = "3.0.4"

[dev-dependencies]
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
tempfile = "3.1.0"

[features]
default = ["std", "cli"]
std = [
  "sc-service/rocksdb",
  "substrate-build-script-utils",
  "sp-consensus-babe/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "altair-runtime/runtime-benchmarks",
  "centrifuge-runtime/runtime-benchmarks",
  "development-runtime/runtime-benchmarks",
  "runtime-common/runtime-benchmarks",
]
test-benchmarks = [
  "runtime-benchmarks",
  "runtime-integration-tests/runtime-benchmarks",
]
cli = [
  'try-runtime-cli',
]
try-runtime = [
  "centrifuge-runtime/try-runtime",
  "altair-runtime/try-runtime",
  "try-runtime-cli",
]

fast-runtime = [
  "altair-runtime/fast-runtime",
  "centrifuge-runtime/fast-runtime",
]
